Fix #30776: image editor pan not using continuous grab if enabled.